<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.maxim.menutest.ui.login.LoginFragment"
        android:label="login_fragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_venuesFragment"
            app:destination="@id/venuesFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/venuesFragment"
        android:name="com.maxim.menutest.ui.venue.VenuesFragment"
        android:label="venue_fragment"
        tools:layout="@layout/fragment_venues" >
        <action
            android:id="@+id/action_venuesFragment_to_venueDetailsFragment"
            app:destination="@id/venueDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/venueDetailsFragment"
        android:name="com.maxim.menutest.ui.venue_details.VenueDetailsFragment"
        android:label="venue_details_fragment"
        tools:layout="@layout/fragment_venue_details" >
        <action
            android:id="@+id/action_venueDetailsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>

</navigation>